--- a/retirada/Rotas/Linhatempo/index.html
+++ b/retirada/Rotas/Linhatempo/index.html
@@ -64,6 +64,13 @@
             <div onmouseover="mouseOver()"  onmouseout="mouseOut()" class="contPers" id="mouseAlt"></div>
 
             <div onmouseover="mouseOver()"  onmouseout="mouseOut()" class="contPers" id="mouseAlt"></div>
+
+            <div onmouseover="mouseOver()"  onmouseout="mouseOut()" class="contPers" id="mouseAlt"></div>
+
+            <div onmouseover="mouseOver()"  onmouseout="mouseOut()" class="contPers" id="mouseAlt"></div>
+
+            <div onmouseover="mouseOver()"  onmouseout="mouseOut()" class="contPers" id="mouseAlt"></div>
+
         </div>
 
     </body>
